# EMGdecomPy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TEAMWORK-CONTRACT.md  pyproject.toml
.github/workflows/: ci-cd.yml
.ipynb_checkpoints/: LICENSE-checkpoint  pyproject-checkpoint.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
docs/final-report/: conclusion.Rmd  final-report-references.bib  final-report.Rmd  intro.Rmd  intro.html  methods.Rmd  methods.html  product.Rmd  summary.Rmd
docs/proposal/: intro.Rmd  intro.html  proposal-references.bib  proposal.Rmd  proposal.html  summary.Rmd  timeline.Rmd  tools.Rmd
docs/proposal/.ipynb_checkpoints/: timeline-checkpoint.Rmd
notebooks/: daniel-initial-eda.ipynb  emgdecompy-worfklow.ipynb  emgdecompy-worfklow_with_del.ipynb  fix_single_mu.ipynb  functions.ipynb  ortho_updates.ipynb
notebooks/.ipynb_checkpoints/: functions-checkpoint.ipynb
notebooks/for-jsb/: 2022-06-07_Decomposition.ipynb  decomposition.py  env1.yaml  env2.yaml  preprocessing.py  viz.py
src/emg-decompy/: emg-decompy.py
src/emgdecompy/: __init__.py  contrast.py  decomposition.py  emgdecompy.py  preprocessing.py  refinement.py  separation.py  viz.py
tests/: test_contrast.py  test_decomposition.py  test_emg-decompy.py  test_emgdecompy.py  test_preprocessing.py  test_viz.py
tests/.ipynb_checkpoints/: test_emg-decompy-checkpoint.py
