[tool.poetry]
name = "emgdecompy"
version = "0.6.1"
description = "A package for decomposing multi-channel intramuscular and surface EMG signals into individual motor unit activity based off the blind source algorithm described in Francesco Negro et al 2016 J. Neural Eng. 13 026027."
authors = ["Daniel King", "Jasmine Ortega", "Rada Rudyak", "Rowan Sivanandam"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
scipy = "^1.8.0"
pandas = "^1.4.2"
altair = "^4.2.0"
numpy = "^1.22.3"
altair-data-server = "^0.4.1"
sklearn = "^0.0"
panel = "^0.13.1"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
myst-nb = {version = "^0.15.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.28.1"
jupyterlab = "^3.4.3"
nbclient = "0.5.13"
[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
